--- a/style/meal.css
+++ b/style/meal.css
@@ -1,10 +1,12 @@
 
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css");
+
 @font-face {
-  font-family: 'Pretendard Variable';
-  font-weight: 45 920;
+  font-family: "Tossface";
   font-style: normal;
+  font-weight: 400;
   font-display: swap;
-  src: local('Pretendard Variable'), url('font/PretendardVariable.ttf') format("truetype");
+  src: url("font/TossFaceFontMac.ttf") format("truetype");
 }
 
 .tossface {
@@ -12,7 +14,7 @@
 }
 
 .Pretendard {
-  font-family: Pretendard Variable, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', sans-serif;
+  font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -93,7 +95,6 @@
   opacity: 0.0;
   transform: translateX(-50%);
   text-overflow: clip;
-  overflow: hidden;
   white-space: nowrap;
 }
 
@@ -105,7 +106,6 @@
   opacity: 0.0;
   transform: translateX(-50%);
   text-overflow: clip;
-  overflow: hidden;
   white-space: nowrap;
 }
 
@@ -118,7 +118,6 @@
   display: flex;
   flex-direction: column;
   text-overflow: clip;
-  overflow: hidden;
   white-space: nowrap;
 }
 
@@ -131,7 +130,6 @@
   opacity: 0.0;
   transform: translateX(-50%);
   text-overflow: clip;
-  overflow: hidden;
   white-space: nowrap;
 }
 
