--- a/style/meal.css
+++ b/style/meal.css
@@ -4,10 +4,12 @@
 
 .tossface {
   font-family: Tossface;
+  font-display: fallback;
 }
 
 .Pretendard {
   font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+  font-display: fallback;
 }
 
 @media (prefers-color-scheme: dark) {
