--- a/style/timetable.css
+++ b/style/timetable.css
@@ -59,7 +59,7 @@
     opacity: 50%;
   }
 
-  .title{
+  .titlex{
     font-family: 'Pretendard Variable';
     font-size: 28px;
     font-weight: 800;
@@ -116,7 +116,7 @@
     opacity: 50%;
   }
 
-  .title{
+  .titlex{
     font-family: 'Pretendard Variable';
     font-size: 28px;
     font-weight: 800;
