시간표 css 개선

--- a/style/timetable.css
+++ b/style/timetable.css
@@ -20,6 +20,11 @@ td{
   height: 3.5rem;
 }
 
+.mainpageX {
+  display: grid;
+  place-content: center;
+}
+
 @media (prefers-color-scheme: dark) {
   body {
     background-color: #1e1e1e;
